--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,18 @@
-
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
+  
+microservice:
+  ms-order:
+    endpoints:
+      enpoint:
+        uri: http://ms-order/orders/order_products
+  ms-payment:
+    endpoints:
+      enpoint:
+        uri: http://ms-payment/pays/pay_products
